--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,11 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
+    },
+    "scripts": {
+        "test": [
+            "composer dump-autoload",
+            "./vendor/bin/phpunit ./tests/"
+        ]
     }
 }
